Modified SASS variables by reduce 10% of saturation and 10 levels of brightness

--- a/scss/_root.scss
+++ b/scss/_root.scss
@@ -16,4 +16,6 @@
   // See https://github.com/sass/sass/issues/2383#issuecomment-336349172
   --font-family-sans-serif: #{inspect($font-family-sans-serif)};
   --font-family-monospace: #{inspect($font-family-monospace)};
+  --font-family-serif: #{inspect($font-family-serif)};
+  --font-family-mini: #{inspect($font-family-mini)};
 }
