--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -33,16 +33,16 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$blue:    hsl(211, 75%, 40%) !default;
+$indigo:  hsl(263, 65%, 41%) !default;
+$purple:  hsl(261, 26%, 41%) !default;
+$pink:    hsl(332, 51%, 48%) !default;
+$red:     hsl(354, 45%, 44%) !default;
+$orange:  hsl(27, 73%, 44%) !default;
+$yellow:  hsl(45, 75%, 41%) !default;
+$green:   hsl(134, 36%, 31%) !default;
+$teal:    hsl(162, 48%, 36%) !default;
+$cyan:    hsl(188, 53%, 31%) !default;
 
 $colors: () !default;
 $colors: map-merge(
@@ -274,9 +274,27 @@ $embed-responsive-aspect-ratios: join(
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base:            $font-family-sans-serif !default;
+
+// AQUEST ERA LA SANS-SERIF ORIGINAL
+// $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+// AQUESTA ÉS LA MEVA SANS-SERIF PERSONALITZADA
+$font-family-sans-serif: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+
+
+$font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
+
+//  AFEGEIXO NOUS TIPUS DE FONTS, LES SERIFES I LES MINIS CAPTIONS
+//  FONTS SERIFES
+$font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
+// FONTS MINIS O CAPTION
+$font-family-mini: "Nunito Sans", Geneva, sans-serif !default;
+
+
+
+
+$font-family-base: $font-family-sans-serif !default;
+
 // stylelint-enable value-keyword-case
 
 $font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
