--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,150 +1,316 @@
-:root {
-    --blue: #007bff;
-    --indigo: #6610f2;
-    --purple: #6f42c1;
-    --pink: #e83e8c;
-    --red: #dc3545;
-    --orange: #fd7e14;
-    --yellow: #ffc107;
-    --green: #28a745;
-    --teal: #20c997;
-    --cyan: #17a2b8;
-    --white: #fff;
-    --gray: #6c757d;
-    --gray-dark: #343a40;
-    --primary: #007bff;
-    --secondary: #6c757d;
-    --success: #28a745;
-    --info: #17a2b8;
-    --warning: #ffc107;
-    --danger: #dc3545;
-    --light: #f8f9fa;
-    --dark: #343a40;
-    --breakpoint-xs: 0;
-    --breakpoint-sm: 576px;
-    --breakpoint-md: 768px;
-    --breakpoint-lg: 992px;
-    --breakpoint-xl: 1200px;
-    --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  }
+@import "../scss/bootstrap";
 
 
 * {
     /* border: 1px dashed grey;; */
     box-sizing: border-box;
-}
+  }
 
-
-body {
+  body {
     min-height: 100vh;
-    background: linear-gradient(white,var(--light));
-    background-size: 100% 100%;
-    background-position-y: top;
-    background-attachment: fixed;
-    color: var(--dark);
     font-family: "Roboto Slab", serif;
-    font-size: 16px;
-}
+    font-weight: 400;
+    /* background: linear-gradient(var(--light), var(--white)); */
+    background: var(--light);
+  }
 
+  /** Classes personalitzades que haurien d'existir a bootstrap */
+  .text-shadow {
+    text-shadow: var(--dark) 1px 1px 2px;
+  }
 
-#cap {
-    background: linear-gradient(#343a4033, var(--dark)), linear-gradient(90deg, var(--dark), #343a4099, var(--dark)), url("../img/vecto-bg.min.svg");
-}
+  .text-center {
+    text-align: center;
+  }
 
-#cap * {
-    /* border: 1px dashed grey; */
-}
+  /** Final de classes personalitzades */
+  .fs-06rem {
+    font-size: 0.6rem;
+  }
 
+  .fs-07rem {
+    font-size: 0.7rem;
+  }
 
-.navbar-brand, .navbar-brand *  {
-    font-family:Oswald, sans-serif;
-}
+  .fs-08rem {
+    font-size: 0.8rem;
+  }
 
-#brand-h1 {
-font-size: .85rem;
-padding: 0;
-margin: 0;
-height: -webkit-fit-content;
-height: -moz-fit-content;
-height: fit-content;
-font-family: Oswald, sans-serif;
-font-weight: 100;
-}
+  .fs-09rem {
+    font-size: 0.9rem;
+  }
 
-#brand-logo
-{
+  .fs-1rem {
+    font-size: 1rem;
+  }
+
+  .fs-11rem {
+    font-size: 1.2rem;
+  }
+
+  .fs-15rem {
     font-size: 1.5rem;
-    line-height: 1rem;
-}
+  }
 
-#imago {
-font-weight:lighter;
-letter-spacing: .1rem;
-}
+  .fs-17rem {
+    font-size: 1.7rem;
+  }
 
+  .fs-2rem {
+    font-size: 2rem;
+  }
 
-#brand-tag {
-    font-size: .8rem;
-    font-weight: 200;
-    letter-spacing:.05rem;
-    color:#ccc;
-}
+  .ff-sans {
+    font-family: var(--font-family-sans-serif);
+  }
 
-#controladora .nav-item {
-    padding: 0 .4rem;
-}
+  #cap {
+    background: linear-gradient(#343a4012, var(--dark)), linear-gradient(90deg, var(--dark), #343a4099, var(--dark)), url("../img/vecto-bg.min.svg");
+  }
 
-#controladora .nav-item>a {
+  .navbar-brand,
+  .navbar-brand * {
+    font-family: Oswald, sans-serif;
+  }
 
-    font-family: "Oswald", sans-serif;
-    font-size: .8rem;
-    font-weight: 300;
-    letter-spacing: .1rem;
-    padding: .2rem 0rem .1rem 0rem;
-    margin-bottom: .2rem;
+  #brand-h1 {
+    font-family: Oswald, sans-serif;
+    font-size: 1.8rem;
+    line-height: 1.6rem;
+    font-weight: 100;
+    margin: 0;
+    padding: 0;
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
-}
+  }
 
+  #brand-logo {
+    letter-spacing: 0.1rem;
+  }
 
+  #imago {
+    font-weight: lighter;
+    letter-spacing: 0.1rem;
+  }
 
-#loginarea {
-    /* background: var(--warning); */
-    font-size: .9rem;
-}
+  #brand-tag {
+    font-size: 0.8rem;
+    font-weight: 200;
+    letter-spacing: 0.1rem;
+    color: #ccc;
+  }
 
-#loginarea>button {
+  #controladora .nav-item {
+    padding: 0 0.5rem;
+  }
+
+  #controladora .nav-item > a {
+    font-family: "Oswald", sans-serif;
+    font-size: 0.9rem;
+    font-weight: 300;
+    letter-spacing: 0.1rem;
+    padding: 0.2rem 0rem 0.1rem 0rem;
+    margin-bottom: 0.2rem;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  #loginarea {
+    font-size: 0.9rem;
+  }
+
+  #loginarea > button {
     font-size: small;
-}
+  }
 
+  #bighero {
+    font-size: 0.9rem;
+    background: linear-gradient(-45deg, #ee775233, #e73c7e33, #23a6d533, #23d5ab33), var(--dark);
+    background-size: 400% 400%;
+    -webkit-animation: gradient 20s ease infinite;
+    animation: gradient 20s ease infinite;
+    filter: saturate(180%);
+    -webkit-filter: saturate(180%);
+  }
 
+  @-webkit-keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+      -webkit-filter: saturate(75%);
+      filter: saturate(75%);
+    }
+    50% {
+      background-position: 100% 50%;
+      -webkit-filter: saturate(250%);
+      filter: saturate(250%);
+    }
+    100% {
+      background-position: 0% 50%;
+      -webkit-filter: saturate(75%);
+      filter: saturate(75%);
+    }
+  }
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  #bighero h1 {
+    letter-spacing: 0.2rem;
+    font-size: 5rem;
+    font-weight: 900;
+    padding: 0;
+    margin: 0;
+  }
 
-main, main * {
-    border:1px solid grey;
-}
+  #titol .migues > li {
+    font-family: var(--font-family-mini) !important;
+    font-size: 0.6rem;
+    letter-spacing: 0.1rem;
+    padding: 0 0;
+    margin: 0;
+    text-transform: uppercase;
+  }
 
+  #titol .migues > li:before {
+    color: var(--light);
+    padding: 0 0.4rem;
+  }
 
+  .sectitol__h2 {
+    font-size: 3.3rem;
+    font-family: var(--font-family-sans-serif);
+    font-weight: 100;
+    letter-spacing: 0.2rem;
+  }
 
+  .sectitol__h3 {
+    font-size: 2.5rem;
+    font-family: var(--font-family-serif);
+    font-weight: 900;
+  }
 
+  .sectitol__h4 {
+    font-size: 3.5rem;
+    font-family: var(--font-family-sans-serif);
+    font-weight: 200;
+  }
 
+  .sectitol__h5 {
+    font-size: 2.5rem;
+    font-family: var(--font-family-serif);
+    font-weight: 900;
+  }
 
+  .sectitol__h6 {
+    font-size: 1.75rem;
+    font-family: var(--font-family-sans-serif);
+    font-weight: 700;
+  }
 
-@media screen and (max-width:992px) {
+  footer a {
+    color: var(--secondary);
+  }
 
+  footer a:hover {
+    color: var(--white);
+  }
+
+  .footer__copy {
+    text-align: left;
+  }
+
+  #me {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    -webkit-filter: grayscale(50%);
+    filter: grayscale(50%);
+    background: url("../img/baixa.png");
+    background-size: cover;
+  }
+
+  @media screen and (min-width: 992px) {
     #lanav {
-        height:-webkit-fit-content;
-        height:-moz-fit-content;
-        height:fit-content;
+      height: 70px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    body > footer {
+      background: url("../img/silouette.png");
+      background-size: contain;
+      background-position: right bottom;
+      background-repeat: no-repeat;
+    }
+  }
+  @media screen and (max-width: 992px) {
+    #lanav {
+      height: -webkit-fit-content;
+      height: -moz-fit-content;
+      height: fit-content;
     }
 
-}
-
-@media screen and (min-width:992px) {
-
-    #lanav {
-        height: 70px;
+    #brand-logo {
+      font-size: 2rem;
+      line-height: 2rem;
     }
 
-}
+    #brand-tag {
+      font-size: 1.5rem;
+    }
+
+    #bighero h1 {
+      font-size: 8vw;
+    }
+
+    .sectitol__h2 {
+      font-size: 10vw;
+    }
+
+    .container {
+      min-width: 100%;
+    }
+
+    .container-fluid {
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    #brand-logo {
+      font-size: 3rem;
+      line-height: 3rem;
+    }
+
+    #brand-tag {
+      font: size 1rem;
+      line-height: 1rem;
+    }
+  }
+  @media screen and (max-width: 576px) {
+    .footer__copy {
+      text-align: center;
+    }
+
+    #brand-logo {
+      font-size: 2rem;
+      line-height: 2rem;
+    }
+
+    #brand-tag {
+      font: size 0.9rem;
+      line-height: 1.3rem;
+    }
+
+    #loginarea {
+      padding: 2rem 0;
+    }
+  }
