--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -288,7 +288,9 @@ $font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "L
 //  FONTS SERIFES
 $font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif !default;
 // FONTS MINIS O CAPTION
-$font-family-mini: "Nunito Sans", Geneva, sans-serif !default;
+$font-family-caption-sans: "Nunito Sans", 'PT Sans Caption', Geneva, sans-serif !default;
+
+$font-family-caption: 'PT Serif Caption', serif !default;
 
 
 
