--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,12 +127,12 @@
 
   #bighero {
     font-size: 0.9rem;
-    background: linear-gradient(-45deg, #ee775233, #e73c7e33, #23a6d533, #23d5ab33), var(--dark);
-    background-size: 400% 400%;
-    -webkit-animation: gradient 20s ease infinite;
-    animation: gradient 20s ease infinite;
-    filter: saturate(180%);
-    -webkit-filter: saturate(180%);
+    background: linear-gradient(-45deg, #ee775233, #e73c7e33,  #23a6d533,  #23d5ab33), var(--dark);
+    background-size: 1000% 1000%;
+    -webkit-animation: gradient 50s ease infinite;
+    animation: gradient 50s ease infinite;
+    filter: saturate(130%);
+    -webkit-filter: saturate(130%);
   }
 
   @-webkit-keyframes gradient {
@@ -172,8 +172,9 @@
   }
 
   #titol .migues > li {
-    font-family: var(--font-family-mini) !important;
+    font-family: var(--font-family-caption-sans) !important;
     font-size: 0.6rem;
+    font-weight: lighter;
     letter-spacing: 0.1rem;
     padding: 0 0;
     margin: 0;
