--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,13 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
   --font-family-sans-serif: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+/* HE HAGUT D'AFEGIR A _variables.scss i a _root.scss  NOVES CATEGORIES TIPOGRÀFIQUES PERQUÈ BOOTSTRAP NOMÉS TENIA DUES */
+  --font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
   --font-family-caption: "PT Serif Caption", serif;
   --font-family-caption-sans: "Nunito Sans", "PT Sans Caption", Geneva, sans-serif;
-  --font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 *,
