--- a/css/style.css
+++ b/css/style.css
@@ -32,13 +32,11 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-
-/* HE HAGUT D'AFEGIR A _variables.scss i a _root.scss  NOVES CATEGORIES TIPOGRÀFIQUES PERQUÈ BOOTSTRAP NOMÉS TENIA DUES */
   --font-family-serif: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
+  --font-family-sans-serif: Oswald, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-caption: "PT Serif Caption", serif;
   --font-family-caption-sans: "Nunito Sans", "PT Sans Caption", Geneva, sans-serif;
+  --font-family-monospace: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 *,
@@ -10000,17 +9998,57 @@ body {
   font-family: var(--font-family-sans-serif);
 }
 
+.bg-blue {
+  background-color: #1a63b3;
+}
+
+.bg-indigo {
+  background-color: #5925ad;
+}
+
+.bg-purple {
+  background-color: #604d84;
+}
+
+.bg-pink {
+  background-color: #b93c76;
+}
+
+.bg-red {
+  background-color: #a33e48;
+}
+
+.bg-orange {
+  background-color: #c2681e;
+}
+
+.bg-yellow {
+  background-color: #b7901a;
+}
+
+.bg-green {
+  background-color: #336c40;
+}
+
+.bg-teal {
+  background-color: #30886d;
+}
+
+.bg-cyan {
+  background-color: #256e79;
+}
+
 #cap {
   background: linear-gradient(#343a4012, var(--dark)), linear-gradient(90deg, var(--dark), #343a4099, var(--dark)), url("../img/vecto-bg.min.svg");
 }
 
 .navbar-brand,
 .navbar-brand * {
-  font-family: Oswald, sans-serif;
+  font-family: var(--font-family-sans-serif);
 }
 
 #brand-h1 {
-  font-family: Oswald, sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-size: 1.8rem;
   line-height: 1.6rem;
   font-weight: 100;
@@ -10042,7 +10080,7 @@ body {
 }
 
 #controladora .nav-item > a {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--font-family-sans-serif);
   font-size: 0.9rem;
   font-weight: 300;
   letter-spacing: 0.1rem;
@@ -10062,6 +10100,8 @@ body {
 }
 
 #bighero {
+  position: relative;
+  z-index: -1;
   font-size: 0.9rem;
   background: linear-gradient(-45deg, #ee775233, #e73c7e33, #23a6d533, #23d5ab33), var(--dark);
   background-size: 1000% 1000%;
@@ -10107,8 +10147,8 @@ body {
   margin: 0;
 }
 
-#titol .migues > li {
-  font-family: var(--font-family-caption-sans) !important;
+#titol .migues {
+  font-family: var(--font-family-sans-serif) !important;
   font-size: 0.6rem;
   font-weight: lighter;
   letter-spacing: 0.1rem;
@@ -10119,7 +10159,6 @@ body {
 
 #titol .migues > li:before {
   color: var(--light);
-  padding: 0 0.4rem;
 }
 
 .sectitol__h2 {
