--- a/css/style.css
+++ b/css/style.css
@@ -10038,7 +10038,7 @@ body {
   background-color: #256e79;
 }
 
-#cap {
+#cap, .section__dark {
   background: linear-gradient(#343a4012, var(--dark)), linear-gradient(90deg, var(--dark), #343a4099, var(--dark)), url("../img/vecto-bg.min.svg");
 }
 
