--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -292,10 +292,7 @@ $font-family-caption-sans: "Nunito Sans", 'PT Sans Caption', Geneva, sans-serif 
 
 $font-family-caption: 'PT Serif Caption', serif !default;
 
-
-
-
-$font-family-base: $font-family-sans-serif !default;
+$font-family-base: $font-family-serif !default;
 
 // stylelint-enable value-keyword-case
 
