--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -14,6 +14,10 @@
   background-color: $white !important;
 }
 
+.bg-black {
+  background-color: $black !important;
+}
+
 .bg-transparent {
   background-color: transparent !important;
 }
