--- a/scss/style2.scss
+++ b/scss/style2.scss
@@ -254,10 +254,10 @@ body {
 
 
 
-// section {
-//   padding-top:2rem;
-//   padding-bottom:2rem;
-// }
+section {
+  padding-top:2rem;
+  padding-bottom:2rem;
+}
 
 
 
@@ -362,6 +362,14 @@ footer a:hover {
     height: -moz-fit-content;
     height: fit-content;
   }
+
+
+
+
+
+
+
+
 
   #bighero h1 {
     font-size: 8vw;
